--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,67 +1,64 @@
-<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:fitsSystemWindows="true"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".MainActivity">
 
-
-    <LinearLayout
+    <!-- Mapa -->
+    <fragment
+        android:id="@+id/id_map"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
-        android:layout_height="fill_parent"
-        android:layout_weight="1"
-        android:orientation="vertical">
+        android:layout_height="0dp"
+        android:layout_weight="1" />
 
-       <fragment
-           android:layout_width="match_parent"
-           android:layout_height="match_parent"
-           android:name="com.google.android.gms.maps.SupportMapFragment"
-           android:id="@+id/id_map"
-           />
-
-    </LinearLayout>
-
+    <!-- Dolny pasek z przyciskami -->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:background="#ADB5BD"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:background="@color/gray">
+
+<!--        <ImageButton-->
+<!--            android:id="@+id/button_search"-->
+<!--            android:layout_width="0dp"-->
+<!--            android:layout_height="match_parent"-->
+<!--            android:layout_weight="1"-->
+<!--            android:padding="8dp"-->
+<!--            android:backgroundTint="@color/gray"-->
+<!--            android:scaleType="centerInside"-->
+<!--            app:srcCompat="@drawable/search_3" />-->
+
+<!--        <ImageButton-->
+<!--            android:id="@+id/button_map"-->
+<!--            android:layout_width="0dp"-->
+<!--            android:layout_height="match_parent"-->
+<!--            android:layout_weight="1"-->
+<!--            android:padding="8dp"-->
+<!--            android:backgroundTint="@color/gray"-->
+<!--            android:scaleType="centerInside"-->
+<!--            app:srcCompat="@drawable/map_1" />-->
 
         <ImageButton
-            android:id="@+id/imageButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:id="@+id/button_current_location"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
             android:layout_weight="1"
-            android:backgroundTint="#ADB5BD"
-            app:srcCompat="@drawable/search_3" />
-
-        <ImageButton
-            android:id="@+id/imageButton2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:backgroundTint="#ADB5BD"
-            app:srcCompat="@drawable/map_1" />
-
-        <ImageButton
-            android:id="@+id/imageButton3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:backgroundTint="#ADB5BD"
+            android:padding="8dp"
+            android:backgroundTint="@color/gray"
+            android:scaleType="centerInside"
             app:srcCompat="@drawable/current_location_1" />
 
         <ImageButton
-            android:id="@+id/imageButton4"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:id="@+id/button_menu"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
             android:layout_weight="1"
-            android:backgroundTint="#ADB5BD"
+            android:padding="8dp"
+            android:backgroundTint="@color/gray"
+            android:scaleType="centerInside"
             app:srcCompat="@drawable/menu_2_1" />
-
     </LinearLayout>
-
 </LinearLayout>
